--- a/src/test/resources/system.properties
+++ b/src/test/resources/system.properties
@@ -8,8 +8,8 @@ GSP.node2=localhost
 GSP.node3=localhost
 
 # put the username and password your machine
-GSP.username=xxxx
-GSP.password=xxxx
+GSP.username=rusev
+GSP.password=2542001
 
 
 GSP.rmiRegistry.port=1099
