--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -5,12 +5,4 @@ log4j.rootLogger=INFO, stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%c{1}: %d{yyyy-MM-dd HH:mm:ss} %-5p Line(%L) - %m%n
-
-# Direct to a file
-log4j.appender.file=org.apache.log4j.RollingFileAppender
-log4j.appender.file.File=/home/saeed/server.log
-#log4j.appender.file.MaxFileSize=5KB
-log4j.appender.file.MaxBackupIndex=2
-log4j.appender.file.layout=org.apache.log4j.PatternLayout
-log4j.appender.file.layout.ConversionPattern=%c{1}: %d{yyyy-MM-dd HH:mm:ss} %-5p Line(%L) - %m%n
+log4j.appender.stdout.layout.ConversionPattern=%d{ISO8601} [%t] %-5p %c - %m%n
