--- a/src/main/resources/system.properties
+++ b/src/main/resources/system.properties
@@ -1,15 +1,24 @@
-<<<<<<< Updated upstream
-=======
 GSP.server=localhost
 GSP.server.port=49053
-GSP.numberOfnodes= 4
+GSP.numberOfnodes=15
 GSP.node0=localhost
 GSP.node1=localhost
 GSP.node2=localhost
 GSP.node3=localhost
-GSP.username=basel
-GSP.password=1392000
->>>>>>> Stashed changes
+GSP.node4=localhost
+GSP.node5=localhost
+GSP.node6=localhost
+GSP.node7=localhost
+GSP.node8=localhost
+GSP.node9=localhost
+GSP.node10=localhost
+GSP.node11=localhost
+GSP.node12=localhost
+GSP.node13=localhost
+GSP.node14=localhost
+GSP.node15=localhost
+GSP.username=amr
+GSP.password=123456
 GSP.rmiRegistry.port=1099
 GSP.rmiRegistry.remoteObjectName=ShortestPath
-GSP.server.batch.concurrent=false
+GSP.server.batch.concurrent=true
